--- a/BallClub/BallClub/Storyboards/Friends.storyboard
+++ b/BallClub/BallClub/Storyboards/Friends.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CKL-ZQ-cNk">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CKL-ZQ-cNk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -210,9 +210,16 @@
                                 </connections>
                             </barButtonItem>
                         </leftBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="acd-if-pG8">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="showEditVC:" destination="GwD-Yj-HCh" id="fbB-Qd-rVn"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="addFriendButton" destination="kEE-2d-jfl" id="kwp-Z7-o3b"/>
+                        <outlet property="editButton" destination="acd-if-pG8" id="Y0K-ZA-RNU"/>
                         <outlet property="heightTextField" destination="qYs-yW-CwS" id="uF3-SF-ryw"/>
                         <outlet property="homeCityLabel" destination="ktr-4h-Ixe" id="Z8z-cO-wsN"/>
                         <outlet property="profileImage" destination="HWv-Hc-7Bu" id="jc8-dS-yie"/>
@@ -222,12 +229,30 @@
                         <outlet property="userNameLabel" destination="p0X-yj-EZN" id="1Wj-nL-RuX"/>
                         <outlet property="weightTextField" destination="G9a-KF-sPD" id="HZz-Sh-XN0"/>
                         <segue destination="AKE-g3-A8m" kind="unwind" identifier="unwindToUserStoryboard" unwindAction="unwindToMenu:" id="tE0-Fg-Pw9"/>
+                        <segue destination="NLQ-ss-nPp" kind="show" identifier="showEditVC" id="sep-Wi-tbg"/>
+                        <segue destination="8ix-Ga-FuY" kind="show" identifier="showGameDetailsVC" id="uUf-ne-XIA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZSW-7f-akK" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="AKE-g3-A8m" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1922" y="352"/>
+        </scene>
+        <!--EditVC-->
+        <scene sceneID="Muj-4x-0fM">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="EditVC" storyboardName="User" referencedIdentifier="EditVC" id="NLQ-ss-nPp" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2C1-BQ-bRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2654" y="351"/>
+        </scene>
+        <!--gameDetailsVC-->
+        <scene sceneID="gob-T4-dde">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="gameDetailsVC" storyboardName="Game" referencedIdentifier="gameDetailsVC" id="8ix-Ga-FuY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nn6-pW-Cc3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2727" y="434"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kxi-XS-SHB">
